--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,11 @@ dependencies = [
     "psycopg2 (>=2.9.11,<3.0.0)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "dotenv (>=0.9.9,<0.10.0)",
-    "ipython (>=9.7.0,<10.0.0)"
+    "ipython (>=9.7.0,<10.0.0)",
+    "django-phonenumber-field[phonenumbers] (>=8.4.0,<9.0.0)",
+    "django-crispy-forms (>=2.5,<3.0)",
+    "crispy-bootstrap5 (>=2025.6,<2026.0)",
+    "certifi (>=2025.11.12,<2026.0.0)"
 ]
 
 
